--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icono.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icono.png" />
+    <link rel="apple-touch-icon" href="/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizarra Compartida</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
